# controllers/waterControllers.js
@@ -157,8 +157,7 @@ export const updateWaterIntakeRecord = async (req, res, next) => {
 
     const consumedWater = dailyWater.consumedWater - waterIntake.ml + ml;
 
-    const waterPercentage =
-      Math.round(consumedWater / dailyWater.dailyWaterGoal) * 100;
+    const waterPercentage = (consumedWater / dailyWater.dailyWaterGoal) * 100;
 
     const payload = {
       _id: waterIntake._id,
